# research

./: .gitignore  404.html  CNAME  fig.json  index.html  mean_risk.py  mkdocs.yml  pyproject.toml
.github/workflows/: deploy_docs.yml
docs/: index.md
docs/notebooks/: 0.0.0-mean-risk.ipynb  0.0.1-options-pricing.ipynb  0.0.2-options-nn-research.ipynb  0.1.1-fraud-payment-eda.ipynb
docs/research/: abstract.md
mlruns/.trash/183480431890140696/: meta.yaml
mlruns/.trash/183480431890140696/0aa87e790aa743b6bc9df3961ab8fe5e/: meta.yaml
mlruns/.trash/183480431890140696/613dd8c4bc534903a30d6de41a3de869/: meta.yaml
mlruns/.trash/183480431890140696/61a84c6698c0441a9328b34f03ac27e3/: meta.yaml
mlruns/.trash/891526773572921860/: meta.yaml
mlruns/0/: meta.yaml
mlruns/721934320915735068/: meta.yaml
mlruns/721934320915735068/05af5f7d00aa471b9d93cc8105f93745/: meta.yaml
mlruns/721934320915735068/1f1938bf5f5c4328b7d343c171868ba9/: meta.yaml
mlruns/721934320915735068/4e8c83b24f2e42cc89db2e2c00f965f8/: meta.yaml
mlruns/721934320915735068/8b1a1ce7c0e54d78b413786001898dd5/: meta.yaml
mlruns/721934320915735068/a6a420f582f240c48f26aa7dfee164d5/: meta.yaml
mlruns/models/mean-risk/: meta.yaml
notebooks/: 0.1.0-fraud-payment-eda.html
notebooks/0.0.0-mean-risk/: index.html
notebooks/0.0.1-options-pricing/: index.html
notebooks/0.0.2-options-nn-research/: index.html
notebooks/0.1.0-fraud-payment-eda/: index.html
notebooks/0.1.1-fraud-payment-eda/: index.html
research/abstract/: index.html
search/: search_index.json
src/research/: option_pricing.py
(+163 files in other folders)
