[project]
name = "research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.4.1",
    "ipykernel>=6.29.5",
    "mkdocs>=1.6.1",
    "mlflow>=2.17.0",
    "numpy>=2.1.2",
    "polars>=1.9.0",
    "quantstream>=0.0.3",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "skfolio>=0.4.2",
    "yfinance>=0.2.45",
]

[tool.uv]
dev-dependencies = [
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material>=9.5.42",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
package = ["src/research"]


